--- a/index.html
+++ b/index.html
@@ -13,39 +13,39 @@
     </div>
 
     <div class="screen">
-      <h1>What is your "Favorite" insect?</h1>
+      <h1>What is your "favorite" insect?</h1>
       <ul class="insects-list">
         <li>
           <button class="choose-insect-btn">
             <p>Fly</p>
-            <img src="https://pngimg.com/uploads/fly/fly_PNG3946.png" alt="fly">
+            <img src="http://pngimg.com/uploads/fly/fly_PNG3946.png" alt="fly">
           </button>
         </li>
         <li>
           <button class="choose-insect-btn">
             <p>Mosquito</p>
-            <img src="https://pngimg.com/uploads/mosquito/mosquito_PNG18171.png" alt="mosquito">
+            <img src="http://pngimg.com/uploads/mosquito/mosquito_PNG18171.png" alt="mosquito"/>
           </button>
         </li>
         <li>
           <button class="choose-insect-btn">
             <p>Spider</p>
-            <img src="https://pngimg.com/uploads/spider/spider_PNG14.png" alt="spider">
+            <img src="http://pngimg.com/uploads/spider/spider_PNG14.png" alt="spider"/>
           </button>
         </li>
         <li>
           <button class="choose-insect-btn">
-            <p>Ant</p>
-            <img src="https://pngimg.com/uploads/ant/ant_PNG115.png" alt="ant">
+            <p>Roach</p>
+            <img src="http://pngimg.com/uploads/roach/roach_PNG12163.png" alt="roach"/>
           </button>
         </li>
       </ul>
     </div>
 
-    <div class="screen game-container">
-      <h3 id="time">Time: 00:00</h3>
-      <h3 id="score">Score: 0</h3>
-      <h5 id="message">
+    <div class="screen game-container" id="game-container">
+      <h3 id="time" class="time">Time: 00:00</h3>
+      <h3 id="score" class="score">Score: 0</h3>
+      <h5 id="message" class="message">
         Are you annoyed yet? <br>
         You are playing an impossible game!!
       </h5>
