added functionality, edited markup

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         You are playing an impossible game!!
       </h5>
 
-      <div class="insect">
+      <!-- <div class="insect">
         <img src="http://pngimg.com/uploads/fly/fly_PNG3946.png" alt="">
-      </div>
+      </div> -->
     </div>
 
     <script src="script.js"></script>
